@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.11 2002/12/05 08:12:43 tron Exp $
+$NetBSD: distinfo,v 1.12 2003/03/27 00:00:42 jdolecek Exp $
 
-SHA1 (./opera-6.11-20021129.1-static-qt.i386.rpm) = d847844d672c63e5a4b627e905d68e6bd67b426d
-Size (./opera-6.11-20021129.1-static-qt.i386.rpm) = 5846888 bytes
+SHA1 (./opera-6.12-20030305.1-static-qt.i386.rpm) = 9f02dd65bd3975e0d254cb0c538f22d7c1af0793
+Size (./opera-6.12-20030305.1-static-qt.i386.rpm) = 4992305 bytes
